--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,7 @@
   	
   <artifactId>spring-data-neo4j</artifactId>
   	
-  <version>7.0.0-M4</version>
+  <version>7.0.0-SNAPSHOT</version>
   	
   <name>Spring Data Neo4j</name>
   	
