GH-2553 - Consolidate issue related integration tests.
Closes #2553.

--- a/src/test/resources/more-custom-queries.properties
+++ b/src/test/resources/more-custom-queries.properties
@@ -1,1 +1,1 @@
-SomeEntity.getSomeEntityViaNamedQuery=MATCH (n:SomeEntity {name: 'A name'}) RETURN n
+Entity2328.getSomeEntityViaNamedQuery=MATCH (n:Entity2328 {name: 'A name'}) RETURN n
