GH-2562 - Restructure documentation.
Especially pull up the parts explaining the differences between SDN6 and SDN+OGM, make the FAQ more visible and have only one appendix in one place.

Closes #2562.

--- a/pom.xml
+++ b/pom.xml
@@ -744,25 +744,13 @@
 								<version>${asciidoctorj-diagram.version}</version>
 							</dependency>
 						</dependencies>
-						<configuration>
-							<backend>html</backend>
-							<doctype>book</doctype>
-							<imagesDir>img</imagesDir>
-							<sourceDirectory>${project.basedir}/src/main/asciidoc</sourceDirectory>
-							<sourceDocumentName>index.adoc</sourceDocumentName>
-							<sourceHighlighter>coderay</sourceHighlighter>
+						<configuration combine.self="append">
 							<attributes>
-								<icons>font</icons>
-								<toc>left</toc>
-								<setanchors/>
-								<idprefix/>
-								<idseparator/>
 								<spring-data-commons-docs>${spring-data-commons-docs.dir}</spring-data-commons-docs>
 							</attributes>
 							<requires>
 								<require>asciidoctor-diagram</require>
 							</requires>
-							<outputDirectory>${project.build.docs}</outputDirectory>
 						</configuration>
 					</plugin>
 					<plugin>
