--- a/pom.xml
+++ b/pom.xml
@@ -257,7 +257,7 @@
 		</dependency>
 		<dependency>
 			<groupId>io.mockk</groupId>
-			<artifactId>mockk</artifactId>
+			<artifactId>mockk-jvm</artifactId>
 			<version>${mockk}</version>
 			<scope>test</scope>
 		</dependency>
