--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,7 @@
 
 	<groupId>org.springframework.data</groupId>
 	<artifactId>spring-data-neo4j</artifactId>
-	<version>7.1.0-SNAPSHOT</version>
+	<version>7.1.0-SNAPSHOT-WITH_KEYSET_SCROLLING</version>
 
 	<name>Spring Data Neo4j</name>
 	<description>Next generation Object-Graph-Mapping for Spring Data.</description>
@@ -115,7 +115,7 @@
 		<skipUnitTests>${skipTests}</skipUnitTests>
 
 		<spring-data-commons-docs.dir>../../../../spring-data-commons/src/main/asciidoc</spring-data-commons-docs.dir>
-		<springdata.commons>3.1.0-SNAPSHOT</springdata.commons>
+		<springdata.commons>3.1.0-GH-2151-SNAPSHOT</springdata.commons>
 	</properties>
 
 	<dependencyManagement>
