GH-2691 - Add basic support for keyset based pagination and scrolling.
Discussed https://github.com/spring-projects/spring-data-commons/issues/2151 and implemented in https://github.com/spring-projects/spring-data-commons/pull/2787 we can build on top and provide basic support for both imperative and reactive repositories.

The support will be available only on the repository level in the first iteration, think

```java
import java.util.UUID;

import org.springframework.data.domain.ScrollPosition;
import org.springframework.data.domain.Sort;
import org.springframework.data.domain.Window;
import org.springframework.data.neo4j.repository.Neo4jRepository;

public interface ScrollingRepository extends Neo4jRepository<ScrollingEntity, UUID> {
	Window<ScrollingEntity> findTop4By(Sort sort, ScrollPosition position);
}
```

and other derived finder methods that have a limit and a stable sort.

If requested, further support can be added to the templates, too.

Closes #2691.

--- a/pom.xml
+++ b/pom.xml
@@ -115,7 +115,7 @@
 		<skipUnitTests>${skipTests}</skipUnitTests>
 
 		<spring-data-commons-docs.dir>../../../../spring-data-commons/src/main/asciidoc</spring-data-commons-docs.dir>
-		<springdata.commons>3.1.0-GH-2151-SNAPSHOT</springdata.commons>
+		<springdata.commons>3.1.0-SNAPSHOT</springdata.commons>
 	</properties>
 
 	<dependencyManagement>
