--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
 	<parent>
 		<groupId>org.springframework.data.build</groupId>
 		<artifactId>spring-data-parent</artifactId>
-		<version>3.1.0</version>
+		<version>3.1.1-SNAPSHOT</version>
 	</parent>
 
 	<groupId>org.springframework.data</groupId>
@@ -115,7 +115,7 @@
 		<skipUnitTests>${skipTests}</skipUnitTests>
 
 		<spring-data-commons-docs.dir>../../../../spring-data-commons/src/main/asciidoc</spring-data-commons-docs.dir>
-		<springdata.commons>3.1.0</springdata.commons>
+		<springdata.commons>3.1.1-SNAPSHOT</springdata.commons>
 	</properties>
 
 	<dependencyManagement>
