--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,7 @@
 
 	<groupId>org.springframework.data</groupId>
 	<artifactId>spring-data-neo4j</artifactId>
-	<version>7.2.0-SNAPSHOT</version>
+	<version>7.2.0-GH-2755-SNAPSHOT</version>
 
 	<name>Spring Data Neo4j</name>
 	<description>Next generation Object-Graph-Mapping for Spring Data.</description>
@@ -244,6 +244,12 @@
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-databind</artifactId>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>io.projectreactor.tools</groupId>
+			<artifactId>blockhound</artifactId>
+			<version>1.0.8.RELEASE</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
@@ -627,6 +633,7 @@
 				<configuration>
 					<useSystemClassLoader>false</useSystemClassLoader>
 					<useFile>false</useFile>
+					<argLine>-XX:+AllowRedefinitionToAddDeleteMethods</argLine>
 					<includes>
 						<include>**/*Test.java</include>
 						<include>**/*Tests.java</include>
