--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
 	<parent>
 		<groupId>org.springframework.data.build</groupId>
 		<artifactId>spring-data-parent</artifactId>
-		<version>3.1.4-SNAPSHOT</version>
+		<version>3.1.4</version>
 	</parent>
 
 	<groupId>org.springframework.data</groupId>
@@ -116,7 +116,7 @@
 		<skipUnitTests>${skipTests}</skipUnitTests>
 
 		<spring-data-commons-docs.dir>../../../../spring-data-commons/src/main/asciidoc</spring-data-commons-docs.dir>
-		<springdata.commons>3.1.4-SNAPSHOT</springdata.commons>
+		<springdata.commons>3.1.4</springdata.commons>
 	</properties>
 
 	<dependencyManagement>
@@ -463,20 +463,8 @@
 	</dependencies>
 
 	<repositories>
-		<repository>
-			<id>spring-snapshot</id>
-			<url>https://repo.spring.io/snapshot</url>
-			<snapshots>
-				<enabled>true</enabled>
-			</snapshots>
-			<releases>
-				<enabled>false</enabled>
-			</releases>
-		</repository>
-		<repository>
-			<id>spring-milestone</id>
-			<url>https://repo.spring.io/milestone</url>
-		</repository>
+		
+		
 	</repositories>
 
 	<build>
