fix: Several issues wrt JavaDoc and the module-path.
The latest version of the Maven JavaDoc plugin and JavaDoc itself have been rightfully complaining that some pieces of SDN have been using internal API of the driver and Cypher-DSL which would not be available on the module-path.

This has been fixed. The schema-name support from Cypher-DSL is now a direct dependency and not relying on the shaded version any long.

Several issues in the `Neo4jSpelSupport` have been fixed along the way.

--- a/pom.xml
+++ b/pom.xml
@@ -199,6 +199,11 @@
 				</exclusions>
 			</dependency>
 			<dependency>
+				<groupId>org.neo4j</groupId>
+				<artifactId>neo4j-cypher-dsl-schema-name-support</artifactId>
+				<version>${cypher-dsl.version}</version>
+			</dependency>
+			<dependency>
 				<groupId>org.neo4j.driver</groupId>
 				<artifactId>neo4j-java-driver</artifactId>
 				<version>${neo4j-java-driver.version}</version>
@@ -369,6 +374,10 @@
 		<dependency>
 			<groupId>org.neo4j</groupId>
 			<artifactId>neo4j-cypher-dsl</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.neo4j</groupId>
+			<artifactId>neo4j-cypher-dsl-schema-name-support</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.neo4j.driver</groupId>
