--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,7 @@
 
 	<groupId>org.springframework.data</groupId>
 	<artifactId>spring-data-neo4j</artifactId>
-	<version>7.3.0-SNAPSHOT</version>
+	<version>7.3.0-GH-2890-SNAPSHOT</version>
 
 	<name>Spring Data Neo4j</name>
 	<description>Next generation Object-Graph-Mapping for Spring Data.</description>
@@ -113,7 +113,7 @@
 
 		<skipUnitTests>${skipTests}</skipUnitTests>
 
-		<springdata.commons>3.3.0-SNAPSHOT</springdata.commons>
+		<springdata.commons>3.3.x-3070-SNAPSHOT</springdata.commons>
 	</properties>
 
 	<dependencyManagement>
