Disable Sortpom plugin for now.
The POM is updated during the release process and sortpom doesn't like our changes.

See #3017

--- a/pom.xml
+++ b/pom.xml
@@ -477,6 +477,7 @@
 						<verifyFailOn>strict</verifyFailOn>
 						<spaceBeforeCloseEmptyElement>true</spaceBeforeCloseEmptyElement>
 						<pomFile>pom.xml</pomFile>
+						<skip>true</skip>
 					</configuration>
 				</plugin>
 				<plugin>
