Fix CI checkstyle configuration to use project-specific rules
- Update checkstyle job to use etc/checkstyle/config.xml and suppressions.xml
- This ensures the CI uses the same checkstyle rules as configured in pom.xml
- Fixes the issue where CI was using sun_checks.xml instead of Spring checks

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -135,4 +135,4 @@ jobs:
           ${{ runner.os }}-maven-
           
     - name: Run Checkstyle
-      run: ./mvnw checkstyle:check -B
+      run: ./mvnw checkstyle:check -B -Dcheckstyle.config.location=etc/checkstyle/config.xml -Dcheckstyle.suppressions.location=etc/checkstyle/suppressions.xml
